# dsa-bst-lab-work

./: CMakeLists.txt  README.md
headers/algorithms/: CountingSort.h  TreeAlgorithm.h
headers/data_structures/: AVLBinarySearchTree.h  ArrayTrie.h  BinarySearchTree.h  MapTrie.h
headers/entities/: Student.h
headers/enums/: Evaluation.h
sources/: Task1BST.cpp  Task2Trie.cpp  Task3SameTree.cpp  Task4Sorting.cpp
sources/algorithms/: CountingSort.cpp  TreeAlgorithm.cpp
sources/data_structures/: AVLBinarySearchTree.cpp  ArrayTrie.cpp  BinarySearchTree.cpp  MapTrie.cpp
sources/entities/: Student.cpp
